# Alpha-Zero-Gomoku

./: .gitignore  AlphaZero-AI网络教程.pptx  CMakeLists-ChineseChess.txt  CMakeLists-Gomoku.txt  CMakeLists.txt  LICENSE  README.md  build command.txt  docker_build  main.cpp  train.sh  train_net.sh
cpp/: chinese_chess.cpp  gomoku.cpp  main.cpp  mcts.cpp  onnx.cpp  play.cpp  train_eval_net.cpp
cpp_cchess/: chinese_chess.cpp  mcts.cpp  mcts_cchess_test.cpp  onnx.cpp  play.cpp  train_eval_net.cpp
include/: chinese_chess.h  common.h  gomoku.h  mcts.h  onnx.h  play.h
include_cchess/: chinese_chess.h  mcts.h  onnx.h  play.h  thread_pool.h
model/: logger.txt
python/: common.py  learner.py  mymodel.onnx  mymodel.pkl  neural_network.py  onnxControllor.py  read_data.py
python_cchess/: common.py  learner.py  neural_network.py  read_data.py
test/: cchess_test.cpp  gomoku_test.cpp  mcts_test.cpp  multi_games_test.cpp  onnx_test.cpp  random_test.cpp  train_eval_net.cpp  write_and_read_test.cpp
